# ECS193AB_team16_EcoCar_UCD

./: MOT.rtd  README.md  autoSaved_MOT.rtd  calib.py  kitti_dataset.bridge.py
3D-Multi-Object-Tracker/: 3DMOT.bridge.py  kitti_3DMOT.py  object.py  register_pose.bridge.py  save_as_kitti.bridge.py
3D-Multi-Object-Tracker/config/global/: .pvrcnn_mot.yaml.kate-swp  pvrcnn_mot.yaml  second_iou_mot.yaml  virconv_mot.yaml
3D-Multi-Object-Tracker/evaluation/results/sha_key/: car_detailed.csv  car_summary.txt
3D-Multi-Object-Tracker/evaluation/results/sha_key/data/: 0001.txt  0006.txt
3D-Multi-Object-Tracker/evaluation/test/: 0001.txt  rt.txt
3D-Multi-Object-Tracker/evaluation_HOTA/scripts/: run_kitti.py
3D-Multi-Object-Tracker/tracker/: box_op.py  tracker.py
3D-Multi-Object-Tracker/viewer/: color_map.py  viewer.py
TrackEval/Trackers/Multi-Object-Tracking/track_ws/: track.launch
TrackEval/Trackers/Multi-Object-Tracking/track_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
TrackEval/Trackers/Multi-Object-Tracking/track_ws/logs/mot_tracking/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  (+30 more)
TrackEval/scripts/: evaluate.py
TrackEval/trackeval/datasets/: kitti_mots.py
UKF/: CMakeLists.txt  cmake_install.cmake
UKF/src/: Radar_player.py
UKF/src/RTMaps/: main.cpp  types.h
UKF/src/test/render/: render.h
utils/: .oxt_to_pose_bridge.py.kate-swp  oxt_to_pose_bridge.py
(+37 files in other folders)
